services/database/couchdb/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: db
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "cdb.<path:argocd:common-secrets#homelab-domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: obsidian-sync-svc-couchdb
          port: 5984
